# Viator-Juce-CMake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: CMakeLists.txt  tests.cpp  tests.h
